# vc-slint

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
src/app/: mod.rs
src/ffi/: aes.rs  cpu.rs
src/tools/: mod.rs
ui/: bridge.slint  main.slint  store.slint  theme.slint
ui/base/fluent/: button.slint  color-combobox.slint  combobox.slint
ui/base/fluent/common/: combobox-color.slint
ui/compiler/: button.slint  lineedit.slint  tableview.slint
ui/compiler/fluent/: button.slint  styling.slint  tableview.slint
ui/page/: AboutPage.slint  AddPage.slint  HomePage.slint  abort.slint  add.slint  home.slint  index.slint
ui/widget/: Line.slint  Page.slint  Router.slint  SideBar.slint  header.slint
