[package]
name = "vc-slint"
version = "0.1.0"
authors = ["Jaydar"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i-slint-backend-winit = "1.3.2"
rust-embed = { version = "8.2.0", features = ["compression"] }

slint = "1.0"
tokio = {version = "1.35.1", features = ["full"]} 
windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

winit = "0.29.4"

[build-dependencies]
slint-build = "1.0"


[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
OriginalFilename = "vc-slint.exe"
LegalCopyright = "Copyright © 2021-2023 Jaydar"
