[package]
name = "vc-slint"
version = "0.1.0"
authors = ["Jaydar"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
serde = { version = "1.0.193", features = ["derive"] }
slint = "1.3.2"
i-slint-backend-winit = "1.3.2"
dirs = "5.0.1"
winit = "0.29.4"
rust-embed = { version = "8.2.0", features = ["compression"] }

windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
toml = "0.8.8"



[profile.release]
strip = true  # 自动从二进制文件中去除符号。
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z" 


[build-dependencies]
slint-build = "1.3.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
OriginalFilename = "vc-slint.exe"
LegalCopyright = "Copyright © 2021-2023 Jaydar"
